--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </head>
 
   <body class="bg-[#F4F7FF]">
-    <main class="max-w-screen-xl mx-auto">
+    <main class="max-w-screen-xl mx-auto pb-20">
       <!-- navbar -->
 
       <nav class="py-5">
