--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="bg-[#F4F7FF]">
+  <body class="bg-[#F4F7FF] h-screen">
     <main class="max-w-screen-xl mx-auto">
       <nav class="py-5">
         <div
